# Frox-Ai-App

./: HOW_TO_GET_THE_EXE.md  README.md  index.html  package.json
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  lib.rs  main.rs  tools.rs
src/components/: SettingsModal.tsx  Sidebar.tsx  Transcript.tsx
