[package]
name = "frox-code"
version = "0.1.0"
description = "Frox Code — an agentic coding assistant powered by the Frox model"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"

[lib]
name = "frox_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
